[workspace]
members = [
    "acceptance",
    "derive-macros",
    "ffi",
    "kernel",
    "kernel/examples/read-table-single-threaded", # todo: put back to `examples/*` when inspect-table is fixed
    "kernel/examples/read-table-multi-threaded"
]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["acceptance", "kernel"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-incubator/delta-kernel-rs"
readme = "README.md"
version = "0.1.1"

[workspace.dependencies]
arrow = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-arith = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-array = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-data = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-ord = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-json = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-select = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
arrow-schema = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
parquet = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master"] }
object_store = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master" }
#arrow = { path = "../arrow-rs/arrow" }
#arrow-arith = { path = "../arrow-rs/arrow-arith" }
#arrow-array = { path = "../arrow-rs/arrow-array" }
#arrow-data = { path = "../arrow-rs/arrow-data" }
#arrow-ord = { path = "../arrow-rs/arrow-ord" }
#arrow-json = { path = "../arrow-rs/arrow-json" }
#arrow-select = { path = "../arrow-rs/arrow-select" }
#arrow-schema = { path = "../arrow-rs/arrow-schema" }
#parquet = { path = "../arrow-rs/parquet", features = ["object_store"] }
#object_store = { path = "../arrow-rs/object_store" }
